tests/lifetime/inter_decl/inter_decl_violations.sim
# Inter-decl lifetime violations. Every function here fires a
# region-based check (either LT-LifetimeMismatch or LT-LifetimeEscape).
#
# Axes covered:
#   E1 — fn returning a ref to a caller-local (dangling)
#   E2 — fn body returning wrong-lifetime side of a multi-'a signature
#   E3 — struct constructed from short-lived ref, escapes as longer
#   E4 — reborrow chain that outlives its root

# ---------- helper declarations reused below ----------

struct<'a> Wrap: Move { r: &'a i64 }

# ---------- E1: fn returning a ref to a local ----------

# Sig claims `$return.* : &'a i64` but the body borrows a local.
# Under lifetime honoring: the returned ref must trace back to a
# 'a-tagged input, not a local. Under current NLL: the loan on
# `x` is live via `$return.*` at return, but drop of `x` happens
# after `$return`'s unborrow, so the local NLL might or might not
# flag it — pin the actual behavior.
fn<'a> dangling_return(dummy: &'a i64, $return: &out &'a i64) {
  x: i64;
  entry:
    x = 42;
    $return.* = &x;
    return
}

# ---------- E2: fn body returns wrong-lifetime side ----------

# Sig: takes 'a and 'b, returns 'a. Body returns y (which is 'b).
# Under lifetime honoring: the assignment `$return.* = copy y` is
# a type mismatch — &'b i64 doesn't unify with &'a i64. Under
# current checker: type-check treats all refs as one kind and
# passes; no diagnostic.
fn<'a, 'b> wrong_lifetime_side(x: &'a i64, y: &'b i64, $return: &out &'a i64) {
  entry:
    unborrow x;
    $return.* = copy y;
    return
}

# ---------- E3: struct outlives its ref source ----------
#
# Currently detected: the field write `$return.*.r = &local` fires
# LifetimeEscape because `local` (body-local) has a Free region and
# the field's declared region is Wrap<'a>'s 'a (via the struct decl).
fn<'a> escape_struct_lifetime(caller_ref: &'a i64, $return: &out Wrap<'a>) {
  local: i64;
  entry:
    local = 1;
    $return.*.r = &local;
    return
}

# ---------- E4: reborrow chain outliving root ----------
#
# `w` is a body-local Wrap<'a>; its field `w.r` gets a &local
# (Free-region). Then the whole struct is moved into $return, whose
# region is 'a. The field-write emits Free outlives 'a → escape.
fn<'a> reborrow_escape($return: &out Wrap<'a>) {
  x: i64;
  w: Wrap<'a>;
  entry:
    x = 7;
    w.r = &x;
    $return.* = move w;
    return
}

# ---------- E5: escape via &out param, not $return ----------

# The output slot isn't $return but a caller-provided &out ref.
# Should still be caught as an escape.
fn<'a> escape_via_out_param(dst: &out &'a i64) {
  local: i64;
  entry:
    local = 5;
    dst.* = &local;
    return
}

# ---------- E6: escape via nested enum-payload write ----------

enum<'a> RefEnum: Copy + Drop { N: unit, R: &'a i64 }

fn<'a> escape_via_enum_variant($return: &out RefEnum<'a>) {
  local: i64;
  r: &i64;
  entry:
    local = 9;
    r = &local;
    $return.* = RefEnum::R(move r);
    return
}

# ---------- E7: multi-lifetime, return tied to 'a but body uses local ----------

# Sig says the returned ref is 'a. Body sneaks in a local-borrowed
# ref instead. Region check: source is Free, dst is 'a → escape.
fn<'a, 'b> multi_lifetime_local_leak(x: &'a i64, y: &'b i64, $return: &out &'a i64) {
  local: i64;
  entry:
    unborrow x;
    unborrow y;
    local = 11;
    $return.* = &local;
    return
}
